--- a/scss/main.css
+++ b/scss/main.css
@@ -822,6 +822,18 @@ p {
   width: 75%;
   margin: 0 auto; }
 
+.btn {
+  display: inline-block;
+  font-weight: 600;
+  border: none;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem; }
+  .btn--primary {
+    color: #fff;
+    background: linear-gradient(to bottom, #72afd3 0%, #37ecba 100%); }
+
 /*------------------------------------*\
 # HAMBURGER
 \*------------------------------------*/
@@ -882,12 +894,27 @@ p {
 .form__input {
   text-align: center;
   border: none;
-  padding: 15px 60px; }
-.form__btn {
-  color: #fff;
-  background: linear-gradient(to bottom, #72afd3 0%, #37ecba 100%);
-  border: none;
-  padding: 15px 20px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 0.9375rem;
+  padding-bottom: 0.9375rem; }
+.form .btn {
   margin-left: -5px; }
+
+.quote {
+  color: #fff;
+  background-image: url("../img/photos/tim-marshall-57456.jpg");
+  background-position: top right;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 50vh; }
+  .quote__text {
+    text-align: center;
+    margin-top: 175px; }
+  .quote__author {
+    text-align: right;
+    margin-right: 190px; }
+    .quote__author::before {
+      content: '-'; }
 
 /*# sourceMappingURL=main.css.map */
