--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,5 +10,7 @@
 @import 'layout/footer';
 @import 'layout/grid';
 
+@import 'modules/btn';
 @import 'modules/burger';
 @import 'modules/forms';
+@import 'modules/quote';
