--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -14,14 +14,13 @@
   &__input {
     text-align: center;
     border: none;
-    padding: 15px 60px;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-top: $button-padding--tb;
+    padding-bottom: $button-padding--tb;
   }
 
-  &__btn {
-    color: $white;
-    background: $gradient;
-    border: none;
-    padding: 15px 20px;
+  .btn {
     margin-left: -5px;
   }
 
