--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,5 +12,6 @@
 
 @import 'modules/btn';
 @import 'modules/burger';
+@import 'modules/events';
 @import 'modules/forms';
 @import 'modules/quote';
