--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,8 @@
 
 @import 'modules/btn';
 @import 'modules/burger';
+@import 'modules/carousel';
 @import 'modules/events';
+@import 'modules/faq';
 @import 'modules/forms';
 @import 'modules/quote';
