--- a/scss/config/_variables.scss
+++ b/scss/config/_variables.scss
@@ -2,6 +2,7 @@
 ** COLORS
 \*------------------------------------*/
 $white: #fff;
+$blue: #73dfdf;
 $light-grey: #8c8c8c;
 $dark-grey: #474747;
 $gradient: linear-gradient(to bottom, rgba(114,175,211,1) 0%, rgba(55,236,186,1) 100%);
