--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 
 @import 'layout/footer';
 @import 'layout/grid';
+@import 'layout/header';
 
 @import 'modules/btn';
 @import 'modules/burger';
@@ -16,4 +17,5 @@
 @import 'modules/events';
 @import 'modules/faq';
 @import 'modules/forms';
+@import 'modules/posts';
 @import 'modules/quote';
