--- a/scss/main.css
+++ b/scss/main.css
@@ -843,6 +843,25 @@ p {
     margin-bottom: 15px;
     padding-top: 20px; }
 
+.nav {
+  background: linear-gradient(to bottom, #72afd3 0%, #37ecba 100%);
+  color: #fff;
+  font-family: "Poppins-Reuglar", sans-serif; }
+  .nav__logo img {
+    width: 48px;
+    margin-top: 30px; }
+  .nav__logo h3 {
+    font-weight: 700;
+    margin: 0;
+    padding-top: 50px;
+    padding-left: 60px; }
+  .nav__links ul {
+    margin-top: 0;
+    margin-bottom: 10px; }
+  .nav__links li {
+    display: inline-block;
+    margin: 0 10px; }
+
 .btn {
   display: inline-block;
   font-weight: 600;
