--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import 'layout/footer';
 @import 'layout/grid';
 @import 'layout/header';
+@import 'layout/nav';
 
 @import 'modules/btn';
 @import 'modules/burger';
