--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -10,6 +10,7 @@
 		}
 
 		h3 {
+			font-size: 1.5rem;
 			font-weight: $bold;
 			margin: 0;
 			padding-top: 50px;
@@ -17,15 +18,20 @@
 		}
 	}
 
+	.search-icon {
+		width: 32px;
+		margin-bottom: -10px;
+	}
+
 	&__links {
 		ul {
-			margin-top: 0;
-			margin-bottom: 10px;
+			margin-top: 5px;
+			margin-bottom: 15px;
 		}
 
 		li {
 			display: inline-block;
-			margin: 0 10px;
+			margin: 0 15px;
 		}
 	}
 }
