--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,9 +12,12 @@
 @import 'layout/header';
 @import 'layout/nav';
 
+@import 'modules/about';
+@import 'modules/authors';
 @import 'modules/btn';
 @import 'modules/burger';
 @import 'modules/carousel';
+@import 'modules/docs';
 @import 'modules/events';
 @import 'modules/faq';
 @import 'modules/forms';
