--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -18,7 +18,7 @@
 		}
   }
 
-  &--primary:hover, &--primary:focus, &--primary:active {
+  /*&--primary:hover, &--primary:focus, &--primary:active {
   	opacity: 0.8;
-  }
+  }*/
 }
