--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,9 +1,21 @@
 .header {
-	height: 65vh;
+	height: 45vh;
 	width: 100%;
 	color: $white;
 	position: relative;
 	overflow: hidden;
+
+	h1 {
+		margin-top: 250px;
+	}
+
+	&--home {
+		height: 65vh;
+
+		h1 {
+			margin-top: 0;
+		}
+	}
 
 	.post {
 		&__img {
