--- a/scss/main.css
+++ b/scss/main.css
@@ -824,11 +824,17 @@ p {
   margin: 0 auto; }
 
 .header {
-  height: 65vh;
+  height: 45vh;
   width: 100%;
   color: #fff;
   position: relative;
   overflow: hidden; }
+  .header h1 {
+    margin-top: 250px; }
+  .header--home {
+    height: 65vh; }
+    .header--home h1 {
+      margin-top: 0; }
   .header .post__img {
     width: 100%;
     height: 120vh;
@@ -866,6 +872,47 @@ p {
     display: inline-block;
     margin: 0 15px; }
 
+.about {
+  padding: 30px 0; }
+  .about__highlight {
+    font-size: 1.125rem;
+    font-weight: 600; }
+  .about h2 {
+    color: #8c8c8c;
+    margin-top: 30px; }
+  .about p {
+    text-align: justify; }
+
+.authors {
+  color: #fff;
+  background: #73dfdf;
+  padding-top: 50px;
+  padding-bottom: 20px; }
+  .authors h2 {
+    margin-bottom: 0; }
+  .authors .author {
+    display: flex;
+    padding-top: 30px;
+    padding-bottom: 30px; }
+    .authors .author__img {
+      width: 130px;
+      height: 130px;
+      overflow: hidden; }
+      .authors .author__img img {
+        width: 130px;
+        height: 130px; }
+    .authors .author__info {
+      padding-top: 20px;
+      padding-left: 50px; }
+      .authors .author__info p:first-child {
+        font-size: 1.25rem;
+        font-weight: 600; }
+      .authors .author__info p:nth-child(2) {
+        font-weight: 600;
+        margin-bottom: 20px; }
+      .authors .author__info p {
+        margin: 0; }
+
 .btn {
   display: inline-block;
   font-weight: 600;
@@ -873,15 +920,16 @@ p {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
   padding-top: 0.9375rem;
-  padding-bottom: 0.9375rem; }
+  padding-bottom: 0.9375rem;
+  /*&--primary:hover, &--primary:focus, &--primary:active {
+  	opacity: 0.8;
+  }*/ }
   .btn--primary {
     background: linear-gradient(to bottom, #72afd3 0%, #37ecba 100%);
     transition: 0.2s; }
     .btn--primary a {
       color: #fff;
       text-decoration: none; }
-  .btn--primary:hover, .btn--primary:focus, .btn--primary:active {
-    opacity: 0.8; }
 
 /*------------------------------------*\
 # HAMBURGER
@@ -937,6 +985,24 @@ p {
   background: #73dfdf;
   height: 65vh; }
 
+.docs {
+  background-image: url("../img/photos/melinda-pack-233281.jpg");
+  padding: 50px 0 100px 0; }
+  .docs h2 {
+    color: #8c8c8c;
+    margin-bottom: 50px; }
+  .docs .doc {
+    color: #fff;
+    height: 15vh;
+    font-size: 1.25rem;
+    font-weight: 300;
+    text-align: left;
+    padding: 20px 80px 20px 50px; }
+    .docs .doc img {
+      width: 48px;
+      padding-top: 15px;
+      margin-right: 15px; }
+
 .events {
   padding: 50px 0 30px 0; }
   .events .event {
@@ -976,6 +1042,7 @@ p {
     text-align: justify;
     margin-bottom: 0; }
   .faq p:first-child {
+    font-size: 1.125rem;
     font-weight: 600;
     margin-top: 0; }
   .faq .link {
