--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,9 +17,12 @@
 @import 'modules/btn';
 @import 'modules/burger';
 @import 'modules/carousel';
+@import 'modules/category';
 @import 'modules/docs';
 @import 'modules/events';
 @import 'modules/faq';
 @import 'modules/forms';
+@import 'modules/pagination';
 @import 'modules/posts';
 @import 'modules/quote';
+@import 'modules/summary';
