--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 
 @import 'modules/about';
 @import 'modules/authors';
+@import 'modules/blog';
 @import 'modules/btn';
 @import 'modules/burger';
 @import 'modules/carousel';
