--- a/scss/main.css
+++ b/scss/main.css
@@ -844,6 +844,8 @@ p {
     z-index: -2; }
   .header .post__info {
     margin-top: 220px; }
+    .header .post__info--top-margin {
+      margin-top: 320px; }
   .header .post__title {
     border-top: 2px dotted #fff;
     margin-bottom: 15px;
@@ -890,28 +892,35 @@ p {
   padding-bottom: 20px; }
   .authors h2 {
     margin-bottom: 0; }
-  .authors .author {
-    display: flex;
-    padding-top: 30px;
-    padding-bottom: 30px; }
-    .authors .author__img {
+
+.author {
+  display: flex;
+  padding-top: 30px;
+  padding-bottom: 30px; }
+  .author__img {
+    width: 130px;
+    height: 130px;
+    overflow: hidden; }
+    .author__img img {
       width: 130px;
-      height: 130px;
-      overflow: hidden; }
-      .authors .author__img img {
-        width: 130px;
-        height: 130px; }
-    .authors .author__info {
-      padding-top: 20px;
-      padding-left: 50px; }
-      .authors .author__info p:first-child {
-        font-size: 1.25rem;
-        font-weight: 600; }
-      .authors .author__info p:nth-child(2) {
-        font-weight: 600;
-        margin-bottom: 20px; }
-      .authors .author__info p {
-        margin: 0; }
+      height: 130px; }
+  .author__info {
+    padding-top: 20px;
+    padding-left: 50px; }
+    .author__info p:first-child {
+      font-size: 1.25rem;
+      font-weight: 600; }
+    .author__info p:nth-child(2) {
+      font-weight: 400;
+      margin-bottom: 20px; }
+    .author__info p {
+      font-weight: 600;
+      margin: 0; }
+
+.post__text {
+  border-bottom: 2px dotted #73dfdf; }
+  .post__text p:not(:first-child) {
+    text-indent: 30px; }
 
 .btn {
   display: inline-block;
@@ -1097,6 +1106,8 @@ p {
 .posts {
   color: #fff;
   padding: 80px 0; }
+  .posts--padding {
+    padding: 50px 0; }
   .posts .post {
     max-width: 407px;
     min-height: 230px;
