--- a/scss/modules/_authors.scss
+++ b/scss/modules/_authors.scss
@@ -7,41 +7,41 @@
 	h2 {
 		margin-bottom: 0;
 	}
+}
 
-	.author {
-		display: flex;
-		padding-top: 30px;
-		padding-bottom: 30px;
+.author {
+	display: flex;
+	padding-top: 30px;
+	padding-bottom: 30px;
 
+	&__img {
+		width: 130px;
+		height: 130px;
+		overflow: hidden;
 
-		&__img {
+		img {
 			width: 130px;
 			height: 130px;
-			overflow: hidden;
+		}
+	}
 
-			img {
-				width: 130px;
-				height: 130px;
-			}
+	&__info {
+		padding-top: 20px;
+		padding-left: 50px;
+
+		p:first-child {
+			font-size: 1.25rem;
+			font-weight: $semibold;
 		}
 
-		&__info {
-			padding-top: 20px;
-			padding-left: 50px;
+		p:nth-child(2) {
+			font-weight: $regular;
+			margin-bottom: 20px;
+		}
 
-			p:first-child {
-				font-size: 1.25rem;
-				font-weight: $semibold;
-			}
-
-			p:nth-child(2) {
-				font-weight: $semibold;
-				margin-bottom: 20px;
-			}
-
-			p {
-				margin: 0;
-			}
+		p {
+			font-weight: $semibold;
+			margin: 0;
 		}
 	}
 }
