--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import 'layout/nav';
 
 @import 'modules/about';
+@import 'modules/accordions';
 @import 'modules/authors';
 @import 'modules/blog';
 @import 'modules/btn';
