--- a/scss/modules/_about.scss
+++ b/scss/modules/_about.scss
@@ -1,6 +1,12 @@
 .about {
-	padding: 30px 0;
-	
+	@include breakpoint ($small) {
+    padding: 20px 0;
+  }
+  
+	@include breakpoint ($large) {
+		padding: 30px 0;
+	}
+
 	&__highlight {
 		font-size: 1.125rem;
 		font-weight: $semibold;
@@ -8,8 +14,16 @@
 
 	h2 {
 		color: $light-grey;
-		margin-top: 30px;
-		margin-bottom: 30px;
+
+		@include breakpoint ($small) {
+    	margin-top: 20px;
+			margin-bottom: 20px;
+  	}
+  
+		@include breakpoint ($large) {
+			margin-top: 30px;
+			margin-bottom: 30px;
+		}
 	}
 
 	p {
