--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -54,7 +54,14 @@
   }
 
   .checkbox {
-    margin-top: 30px;
+    @include breakpoint ($small) {
+      margin-top: 15px;
+    }
+  
+    @include breakpoint ($medium) {
+      margin-top: 30px;
+    }
+    
 
     &__label {
       font-family: $heading-font-family;
@@ -64,10 +71,20 @@
   }
 
   .btn {
-    margin-left: -5px;
+    margin-left: -5px;  
 
     &--contact {
-      margin-top: -30px;
+      @include breakpoint ($small) {
+        margin-top: 15px;
+      }
+  
+      @include breakpoint ($medium) {
+        margin-top: -40px;
+      }
+
+      @include breakpoint ($medium) {
+        margin-top: -30px;
+      }
     }
   }
 }
