--- a/scss/modules/_btn.scss
+++ b/scss/modules/_btn.scss
@@ -18,6 +18,11 @@
 		}
   }
 
+  &--apply {
+    padding-left: 2.375rem;
+    padding-right: 2.375rem;
+  }
+
   /*&--primary:hover, &--primary:focus, &--primary:active {
   	opacity: 0.8;
   }*/
