--- a/scss/main.css
+++ b/scss/main.css
@@ -1345,9 +1345,11 @@ p {
     text-align: justify; }
   @media only screen and (min-width: 0) {
     .summary .post__info {
+      font-size: 0.75rem;
       margin-top: 10px; } }
   @media only screen and (min-width: 1024px) {
     .summary .post__info {
+      font-size: 0.875rem;
       margin-top: 0; } }
   .summary h2 {
     font-family: "LibreBaskerville-Regular", serif;
