--- a/scss/main.css
+++ b/scss/main.css
@@ -862,10 +862,17 @@ p {
   @media only screen and (min-width: 1024px) {
     .header h1 {
       margin-top: 250px; } }
-  .header--home {
-    height: 65vh; }
-    .header--home h1 {
-      margin-top: 0; }
+  @media only screen and (min-width: 0) {
+    .header--home {
+      height: 40vh; } }
+  @media only screen and (min-width: 640px) {
+    .header--home {
+      height: 50vh; } }
+  @media only screen and (min-width: 1024px) {
+    .header--home {
+      height: 65vh; } }
+  .header--home h1 {
+    margin-top: 0; }
   .header .post__img {
     width: 100%;
     height: 120vh;
@@ -875,8 +882,15 @@ p {
     z-index: -2; }
   .header .post__info {
     margin-top: 250px; }
-    .header .post__info--top-margin {
-      margin-top: 320px; }
+    @media only screen and (min-width: 0) {
+      .header .post__info--top-margin {
+        margin-top: 130px; } }
+    @media only screen and (min-width: 640px) {
+      .header .post__info--top-margin {
+        margin-top: 230px; } }
+    @media only screen and (min-width: 1024px) {
+      .header .post__info--top-margin {
+        margin-top: 320px; } }
   .header .post__title {
     border-top: 2px dotted #fff;
     margin-bottom: 15px;
@@ -981,32 +995,80 @@ p {
   background: #73dfdf;
   padding-top: 50px;
   padding-bottom: 20px; }
+  .authors--flex {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap; }
   .authors h2 {
     margin-bottom: 0; }
 
 .author {
   display: flex;
-  padding-top: 30px;
-  padding-bottom: 30px; }
-  .author__img {
-    width: 130px;
-    height: 130px;
-    overflow: hidden; }
-    .author__img img {
-      width: 130px;
-      height: 130px; }
-  .author__info {
-    padding-top: 20px;
-    padding-left: 50px; }
-    .author__info p:first-child {
-      font-size: 1.25rem;
-      font-weight: 600; }
-    .author__info p:nth-child(2) {
-      font-weight: 400;
-      margin-bottom: 20px; }
-    .author__info p {
-      font-weight: 600;
-      margin: 0; }
+  justify-content: space-between; }
+  @media only screen and (min-width: 0) {
+    .author {
+      flex-direction: column; } }
+  @media only screen and (min-width: 1024px) {
+    .author {
+      flex-direction: row;
+      width: 100%; } }
+  @media only screen and (min-width: 1024px) {
+    .author--border {
+      border-bottom: 2px dotted #fff; } }
+  .author__item {
+    display: flex;
+    padding: 30px 0; }
+    @media only screen and (min-width: 1024px) {
+      .author__item {
+        margin-right: 0.6875rem; } }
+  .author__img img {
+    width: 150px;
+    height: 150px; }
+  @media only screen and (min-width: 0) {
+    .author__info {
+      padding-top: 10px;
+      padding-left: 30px; } }
+  @media only screen and (min-width: 1024px) {
+    .author__info {
+      padding-top: 20px;
+      padding-left: 30px; } }
+  @media only screen and (min-width: 1440px) {
+    .author__info {
+      padding-left: 50px; } }
+  .author__info p:first-child {
+    font-weight: 600; }
+    @media only screen and (min-width: 0) {
+      .author__info p:first-child {
+        font-size: 1.125rem; } }
+    @media only screen and (min-width: 1024px) {
+      .author__info p:first-child {
+        font-size: 1.25rem; } }
+  .author__info p:nth-child(2) {
+    font-weight: 400;
+    margin-bottom: 20px; }
+  .author__info p {
+    margin: 0; }
+  .author .link {
+    color: #fff;
+    font-weight: 600; }
+  .author--small {
+    padding-top: 0; }
+    .author--small .author__img {
+      width: 80px;
+      height: 80px;
+      overflow: hidden; }
+      .author--small .author__img img {
+        width: 150px;
+        height: 150px;
+        margin-left: -40%;
+        margin-top: -30%; }
+    .author--small .author__info {
+      padding-top: 0;
+      padding-left: 20px; }
+      .author--small .author__info p:nth-child(2) {
+        margin-bottom: 10px; }
+    .author--small .link {
+      color: #474747; }
 
 .post__text {
   border-bottom: 2px dotted #73dfdf; }
@@ -1112,19 +1174,29 @@ p {
   background-image: url("../img/photos/melinda-pack-233281.jpg");
   padding: 50px 0 100px 0; }
   .docs h2 {
-    color: #8c8c8c;
-    margin-bottom: 50px; }
+    color: #8c8c8c; }
+    @media only screen and (min-width: 0) {
+      .docs h2 {
+        margin-bottom: 10px; } }
+    @media only screen and (min-width: 1024px) {
+      .docs h2 {
+        margin-bottom: 50px; } }
   .docs .doc {
-    color: #fff;
+    width: 100%;
     height: 15vh;
+    color: #fff;
     font-size: 1.25rem;
     font-weight: 300;
     text-align: left;
-    padding: 20px 80px 20px 50px; }
+    padding: 10px 50px; }
+    @media only screen and (min-width: 0) {
+      .docs .doc {
+        margin-top: 30px; } }
+    @media only screen and (min-width: 1024px) {
+      .docs .doc {
+        margin-top: 0; } }
     .docs .doc img {
-      width: 48px;
-      padding-top: 15px;
-      margin-right: 15px; }
+      width: 48px; }
 
 .events {
   padding: 50px 0 30px 0; }
@@ -1286,6 +1358,12 @@ p {
     min-height: 230px;
     position: relative;
     overflow: hidden; }
+    @media only screen and (min-width: 0) {
+      .posts .post {
+        margin-top: 30px; } }
+    @media only screen and (min-width: 1024px) {
+      .posts .post {
+        margin-top: 0; } }
     .posts .post__img {
       width: 407px;
       height: 250px;
@@ -1302,6 +1380,10 @@ p {
       border-top: 2px dotted #73dfdf;
       margin: 0 40px;
       padding-top: 15px; }
+
+.post--highlight {
+  font-size: 1.125rem;
+  font-weight: 600; }
 
 .quote {
   color: #fff;
