--- a/scss/modules/_authors.scss
+++ b/scss/modules/_authors.scss
@@ -4,6 +4,12 @@
 	padding-top: 50px;
 	padding-bottom: 20px;
 
+	&--flex {
+		display: flex;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
 	h2 {
 		margin-bottom: 0;
 	}
@@ -11,27 +17,63 @@
 
 .author {
 	display: flex;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	justify-content: space-between;
+		
 
-	&__img {
-		width: 130px;
-		height: 130px;
-		overflow: hidden;
+	@include breakpoint ($small) {
+  	flex-direction: column;
+	}
+  
+	@include breakpoint ($large) {
+		flex-direction: row;
+		width: 100%;
+	}
 
-		img {
-			width: 130px;
-			height: 130px;
+	&--border {
+		@include breakpoint ($large) {
+			border-bottom: 2px dotted $white;
 		}
 	}
 
+	&__item {
+		display: flex;
+		padding: 30px 0;
+
+		@include breakpoint ($large) {
+			margin-right: 0.6875rem;
+		}
+	}
+
+	&__img img {
+		width: 150px;
+		height: 150px;
+	}
+
 	&__info {
-		padding-top: 20px;
-		padding-left: 50px;
+		@include breakpoint ($small) {
+			padding-top: 10px;
+			padding-left: 30px;
+		}
+
+		@include breakpoint ($large) {
+			padding-top: 20px;
+			padding-left: 30px;
+		}
+
+		@include breakpoint ($xxlarge) {
+			padding-left: 50px;
+		}
 
 		p:first-child {
-			font-size: 1.25rem;
 			font-weight: $semibold;
+
+			@include breakpoint ($small) {
+    		font-size: 1.125rem;
+			}
+  
+			@include breakpoint ($large) {
+				font-size: 1.25rem;
+			}
 		}
 
 		p:nth-child(2) {
@@ -40,8 +82,42 @@
 		}
 
 		p {
-			font-weight: $semibold;
 			margin: 0;
+		}
+	}
+
+	.link {
+		color: $white;
+		font-weight: $semibold;
+	}
+
+	&--small {
+		padding-top: 0;
+		
+		.author__img {
+			width: 80px;
+			height: 80px;
+			overflow: hidden;
+
+			img {
+				width: 150px;
+				height: 150px;
+				margin-left: -40%;
+				margin-top: -30%;
+			}
+		}
+
+		.author__info {
+			padding-top: 0;
+			padding-left: 20px;
+
+			p:nth-child(2) {
+				margin-bottom: 10px;
+			}
+		}
+
+		.link {
+			color: $dark-grey;
 		}
 	}
 }
