--- a/scss/modules/_docs.scss
+++ b/scss/modules/_docs.scss
@@ -4,21 +4,35 @@
 
 	h2 {
 		color: $light-grey;
-		margin-bottom: 50px;
+
+		@include breakpoint ($small) {
+			margin-bottom: 10px;
+		}
+  
+		@include breakpoint ($large) {
+			margin-bottom: 50px;
+		}
 	}
 
 	.doc {
-		color: $white;
+		width: 100%;
 		height: 15vh;
+		color: $white;
 		font-size: 1.25rem;
 		font-weight: $light;
 		text-align: left;
-		padding: 20px 80px 20px 50px;
+		padding: 10px 50px;
+
+		@include breakpoint ($small) {
+			margin-top: 30px;
+		}
+  
+		@include breakpoint ($large) {
+			margin-top: 0;
+		}
 
 		img {
 			width: 48px;
-			padding-top: 15px;
-			margin-right: 15px;
 		}
 	}
 }
