--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -59,7 +59,17 @@
 		}
 
 		&__info {
-			margin-top: 250px;
+			@include breakpoint ($small) {
+				margin-top: 130px;
+			}
+
+			@include breakpoint ($medium) {
+				margin-top: 230px;
+			}
+
+			@include breakpoint ($large) {
+				margin-top: 250px;
+			}
 
 			&--top-margin {
 				@include breakpoint ($small) {
@@ -80,6 +90,16 @@
 			border-top: 2px dotted $white;
 			margin-bottom: 15px;
 			padding-top: 20px; 
+		}
+
+		p {
+			@include breakpoint ($small) {
+				display: none;
+			}
+
+			@include breakpoint ($large) {
+				display: block;
+			}
 		}
 	}
 }
