--- a/scss/config/_mixins.scss
+++ b/scss/config/_mixins.scss
@@ -51,3 +51,15 @@
     font-size: $fs-font-size;
   }
 }
+
+
+
+/*------------------------------------*\
+** VERTICAL CENTERING
+\*------------------------------------*/
+
+@mixin vertical-align($position: relative) {
+  position: $position;
+  top: 50%;
+  transform: translateY(-50%);
+}
