--- a/scss/main.css
+++ b/scss/main.css
@@ -8,6 +8,9 @@
 ** UTILIY FUNCTION FOR FONT-SIZE MIXIN
 \*------------------------------------*/
 /*------------------------------------*\
+** VERTICAL CENTERING
+\*------------------------------------*/
+/*------------------------------------*\
 ** COLORS
 \*------------------------------------*/
 /*------------------------------------*\
@@ -351,15 +354,32 @@ p {
   color: #fff;
   background: linear-gradient(to bottom, #72d0da 0%, #62e5d5 100%);
   padding: 30px 0 50px 0; }
-  .footer .logo {
-    width: 250px;
-    margin-left: 330px;
-    margin-bottom: 15px; }
+  @media only screen and (min-width: 0) {
+    .footer .logo {
+      display: none; } }
+  @media only screen and (min-width: 1024px) {
+    .footer .logo {
+      display: block;
+      width: 250px;
+      margin-left: 130px;
+      margin-bottom: 20px; } }
+  @media only screen and (min-width: 1200px) {
+    .footer .logo {
+      margin-left: 150px; } }
+  @media only screen and (min-width: 1440px) {
+    .footer .logo {
+      margin-left: 250px; } }
   .footer .sm-icons {
-    padding-top: 80px; }
+    padding-top: 85px; }
     .footer .sm-icons__img {
       width: 32px;
       margin-right: 20px; }
+      @media only screen and (min-width: 0) {
+        .footer .sm-icons__img {
+          margin-bottom: 15px; } }
+      @media only screen and (min-width: 1024px) {
+        .footer .sm-icons__img {
+          margin-bottom: 0; } }
   .footer .copy {
     display: flex;
     justify-content: space-between;
@@ -880,29 +900,60 @@ p {
     left: 0;
     top: -150px;
     z-index: -2; }
-  .header .post__info {
-    margin-top: 250px; }
-    @media only screen and (min-width: 0) {
-      .header .post__info--top-margin {
-        margin-top: 130px; } }
-    @media only screen and (min-width: 640px) {
-      .header .post__info--top-margin {
-        margin-top: 230px; } }
-    @media only screen and (min-width: 1024px) {
-      .header .post__info--top-margin {
-        margin-top: 320px; } }
+  @media only screen and (min-width: 0) {
+    .header .post__info {
+      margin-top: 130px; } }
+  @media only screen and (min-width: 640px) {
+    .header .post__info {
+      margin-top: 230px; } }
+  @media only screen and (min-width: 1024px) {
+    .header .post__info {
+      margin-top: 250px; } }
+  @media only screen and (min-width: 0) {
+    .header .post__info--top-margin {
+      margin-top: 130px; } }
+  @media only screen and (min-width: 640px) {
+    .header .post__info--top-margin {
+      margin-top: 230px; } }
+  @media only screen and (min-width: 1024px) {
+    .header .post__info--top-margin {
+      margin-top: 320px; } }
   .header .post__title {
     border-top: 2px dotted #fff;
     margin-bottom: 15px;
     padding-top: 20px; }
+  @media only screen and (min-width: 0) {
+    .header .post p {
+      display: none; } }
+  @media only screen and (min-width: 1024px) {
+    .header .post p {
+      display: block; } }
 
 .nav {
   background: linear-gradient(to bottom, #72afd3 0%, #37ecba 100%);
   color: #fff;
   font-family: "Poppins-Reuglar", sans-serif; }
+  @media only screen and (min-width: 0) {
+    .nav--mobile {
+      display: block; } }
+  @media only screen and (min-width: 1024px) {
+    .nav--mobile {
+      display: none; } }
+  @media only screen and (min-width: 0) {
+    .nav--desktop {
+      display: none; } }
+  @media only screen and (min-width: 1024px) {
+    .nav--desktop {
+      display: block; } }
   .nav__logo img {
-    width: 48px;
-    margin-top: 30px; }
+    width: 48px; }
+    @media only screen and (min-width: 0) {
+      .nav__logo img {
+        margin-top: 15px;
+        padding-bottom: 15px; } }
+    @media only screen and (min-width: 1024px) {
+      .nav__logo img {
+        margin-top: 30px; } }
   .nav__logo h3 {
     font-size: 1.5rem;
     font-weight: 700;
@@ -1107,7 +1158,9 @@ p {
   top: 2rem;
   padding-bottom: 1rem;
   padding-top: 1rem;
-  z-index: 3; }
+  z-index: 3;
+  right: 30px;
+  top: 25px; }
   .nav--user__burger:hover {
     cursor: pointer; }
 
@@ -1147,8 +1200,28 @@ p {
     top: 0; }
 
 .carousel {
-  background: #73dfdf;
-  height: 65vh; }
+  background: #73dfdf; }
+  @media only screen and (min-width: 0) {
+    .carousel {
+      height: 40vh; } }
+  @media only screen and (min-width: 640px) {
+    .carousel {
+      height: 50vh; } }
+  @media only screen and (min-width: 1024px) {
+    .carousel {
+      height: 65vh; } }
+  @media only screen and (min-width: 0) {
+    .carousel__item {
+      margin-top: 40px;
+      height: 220px; } }
+  @media only screen and (min-width: 640px) {
+    .carousel__item {
+      margin-top: 40px;
+      height: 300px; } }
+  @media only screen and (min-width: 1024px) {
+    .carousel__item {
+      height: 400px;
+      margin-top: 60px; } }
 
 .category ul {
   padding: 0; }
@@ -1208,6 +1281,12 @@ p {
       max-width: 250px;
       max-height: 200px;
       overflow: hidden; }
+      @media only screen and (min-width: 0) {
+        .events .event__img {
+          display: none; } }
+      @media only screen and (min-width: 640px) {
+        .events .event__img {
+          display: block; } }
       .events .event__img img {
         width: 300px;
         height: 200px; }
@@ -1221,12 +1300,17 @@ p {
         font-weight: 600; }
       .events .event__info p {
         margin: 0; }
-    .events .event--border::after {
-      content: '';
-      position: absolute;
-      width: 575px;
-      margin-top: 240px;
-      border-bottom: 2px dotted #8c8c8c; }
+    @media only screen and (min-width: 0) {
+      .events .event--border::after {
+        display: none; } }
+    @media only screen and (min-width: 1200px) {
+      .events .event--border::after {
+        display: block;
+        content: '';
+        position: absolute;
+        width: 575px;
+        margin-top: 240px;
+        border-bottom: 2px dotted #8c8c8c; } }
   .events .btn {
     margin-top: 20px;
     margin-bottom: 30px; }
@@ -1238,8 +1322,19 @@ p {
     margin-bottom: 0; }
   .faq p:first-child {
     font-size: 1.125rem;
-    font-weight: 600;
-    margin-top: 0; }
+    font-weight: 600; }
+    @media only screen and (min-width: 0) {
+      .faq p:first-child {
+        margin-top: 30px; } }
+    @media only screen and (min-width: 1024px) {
+      .faq p:first-child {
+        margin-top: 0; } }
+  @media only screen and (min-width: 0) {
+    .faq h2 {
+      margin-bottom: 0; } }
+  @media only screen and (min-width: 1024px) {
+    .faq h2 {
+      margin-bottom: 30px; } }
   .faq .link {
     color: #474747;
     font-family: "Poppins-Reuglar", sans-serif;
@@ -1259,10 +1354,16 @@ p {
   color: #474747;
   text-align: center;
   border: none;
-  padding-left: 60px;
-  padding-right: 60px;
   padding-top: 0.9375rem;
   padding-bottom: 0.9375rem; }
+  @media only screen and (min-width: 0) {
+    .form__input {
+      padding-left: 30px;
+      padding-right: 30px; } }
+  @media only screen and (min-width: 640px) {
+    .form__input {
+      padding-left: 60px;
+      padding-right: 60px; } }
   .form__input--contact {
     font-family: "LibreBaskerville-Regular", serif;
     font-size: 1rem;
@@ -1299,17 +1400,23 @@ p {
   font-family: "Poppins-Reuglar", sans-serif;
   font-size: 0.75rem;
   font-weight: 600; }
-.form .btn {
-  margin-left: -5px; }
-  @media only screen and (min-width: 0) {
-    .form .btn--contact {
-      margin-top: 15px; } }
-  @media only screen and (min-width: 640px) {
-    .form .btn--contact {
-      margin-top: -40px; } }
-  @media only screen and (min-width: 640px) {
-    .form .btn--contact {
-      margin-top: -30px; } }
+@media only screen and (min-width: 0) {
+  .form .btn {
+    margin-top: 15px;
+    margin-left: 0; } }
+@media only screen and (min-width: 640px) {
+  .form .btn {
+    margin-top: 0;
+    margin-left: -5px; } }
+@media only screen and (min-width: 0) {
+  .form .btn--contact {
+    margin-top: 15px; } }
+@media only screen and (min-width: 640px) {
+  .form .btn--contact {
+    margin-top: -40px; } }
+@media only screen and (min-width: 640px) {
+  .form .btn--contact {
+    margin-top: -30px; } }
 
 /*------------------------------------*\
 # CONTACT FORM
@@ -1392,12 +1499,23 @@ p {
   background-repeat: no-repeat;
   width: 100%;
   height: 50vh; }
+  @media only screen and (min-width: 0) {
+    .quote {
+      display: none; } }
+  @media only screen and (min-width: 640px) {
+    .quote {
+      display: block; } }
   .quote__text {
     text-align: center;
     margin-top: 175px; }
   .quote__author {
-    text-align: right;
-    margin-right: 280px; }
+    text-align: right; }
+    @media only screen and (min-width: 640px) {
+      .quote__author {
+        margin-right: 180px; } }
+    @media only screen and (min-width: 1024px) {
+      .quote__author {
+        margin-right: 280px; } }
     .quote__author::before {
       content: '-'; }
 
@@ -1467,5 +1585,348 @@ p {
     @media only screen and (min-width: 1024px) {
       .map .gmap {
         height: 50vh; } }
+
+/*------------------------------------*\
+# HEADER
+\*------------------------------------*/
+.owl-carousel--header .owl-nav {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%; }
+.owl-carousel--header .owl-prev, .owl-carousel--header .owl-next {
+  margin-top: -32px !important;
+  padding: 32px 16px !important;
+  position: absolute;
+  transition: 0.4s;
+  opacity: 0.75; }
+  .owl-carousel--header .owl-prev:hover, .owl-carousel--header .owl-next:hover {
+    opacity: 1; }
+.owl-carousel--header .owl-prev {
+  background: transparent image-url("icons/arrow_prev.svg") no-repeat center !important;
+  left: 1rem; }
+.owl-carousel--header .owl-next {
+  position: absolute;
+  background: transparent image-url("icons/arrow_next.svg") no-repeat center !important;
+  right: 1rem; }
+.owl-carousel--header .owl-dots {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0; }
+.owl-carousel--header .owl-dot {
+  position: relative; }
+.owl-carousel--header .owl-dot > span {
+  border-radius: 0 !important;
+  background: #fff !important; }
+.owl-carousel--header .owl-dot.active > span {
+  width: 10px !important;
+  height: 10px !important;
+  margin: 5px 7px !important;
+  background: #fff !important; }
+  .owl-carousel--header .owl-dot.active > span::after {
+    display: none; }
+@media only screen and (min-width: 640px) {
+  .owl-carousel--header .owl-stage-outer, .owl-carousel--header .owl-item {
+    height: 30vh;
+    min-height: 30vh; } }
+@media only screen and (min-width: 1024px) {
+  .owl-carousel--header .owl-stage-outer, .owl-carousel--header .owl-item {
+    height: 40vh;
+    min-height: 40vh; } }
+@media only screen and (min-width: 1200px) {
+  .owl-carousel--header .owl-stage-outer, .owl-carousel--header .owl-item {
+    height: 50vh;
+    min-height: 50vh; } }
+.owl-carousel--header .owl-item > img {
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%); }
+
+/*------------------------------------*\
+# REEL
+\*------------------------------------*/
+.owl-carousel--reel {
+  margin-bottom: 3rem; }
+  .owl-carousel--reel .owl-item.active {
+    background-color: transparent !important; }
+  .owl-carousel--reel .owl-controls {
+    display: none; }
+  .owl-carousel--reel .owl-item > img {
+    height: auto !important;
+    width: auto !important;
+    min-height: 100% !important;
+    min-width: 100% !important; }
+
+/*------------------------------------*\
+# DEFAULTS
+\*------------------------------------*/
+/*
+ *  Default theme - Owl Carousel CSS File
+ */
+.owl-theme .owl-nav {
+  margin-top: 10px;
+  text-align: center;
+  -webkit-tap-highlight-color: transparent; }
+
+.owl-theme .owl-nav [class*='owl-'] {
+  color: #FFF;
+  font-size: 14px;
+  margin: 5px;
+  padding: 4px 7px;
+  background: #D6D6D6;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px; }
+
+.owl-theme .owl-nav [class*='owl-']:hover {
+  background: #869791;
+  color: #FFF;
+  text-decoration: none; }
+
+.owl-theme .owl-nav .disabled {
+  opacity: 0.5;
+  cursor: default; }
+
+.owl-theme .owl-nav.disabled + .owl-dots {
+  margin-top: 10px; }
+
+.owl-theme .owl-dots {
+  text-align: center;
+  -webkit-tap-highlight-color: transparent; }
+
+.owl-theme .owl-dots .owl-dot {
+  display: inline-block;
+  zoom: 1;
+  *display: inline; }
+
+.owl-theme .owl-dots .owl-dot span {
+  width: 10px;
+  height: 10px;
+  margin: 5px 7px;
+  background: #D6D6D6;
+  display: block;
+  -webkit-backface-visibility: visible;
+  -webkit-transition: opacity 200ms ease;
+  -moz-transition: opacity 200ms ease;
+  -ms-transition: opacity 200ms ease;
+  -o-transition: opacity 200ms ease;
+  transition: opacity 200ms ease;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px; }
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+  background: #869791; }
+
+.owl-item > img {
+  width: 100%; }
+
+/*
+ *  Owl Carousel - Animate Plugin
+ */
+.owl-carousel .animated {
+  -webkit-animation-duration: 1000ms;
+  animation-duration: 1000ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both; }
+
+.owl-carousel .owl-animated-in {
+  z-index: 0; }
+
+.owl-carousel .owl-animated-out {
+  z-index: 1; }
+
+.owl-carousel .fadeOut {
+  -webkit-animation-name: fadeOut;
+  animation-name: fadeOut; }
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+@keyframes fadeOut {
+  0% {
+    opacity: 1; }
+  100% {
+    opacity: 0; } }
+/*
+ *  Owl Carousel - Auto Height Plugin
+ */
+.owl-height {
+  -webkit-transition: height 500ms ease-in-out;
+  -moz-transition: height 500ms ease-in-out;
+  -ms-transition: height 500ms ease-in-out;
+  -o-transition: height 500ms ease-in-out;
+  transition: height 500ms ease-in-out; }
+
+/*
+ *  Core Owl Carousel CSS File
+ */
+.owl-carousel {
+  display: none;
+  width: 100%;
+  -webkit-tap-highlight-color: transparent;
+  /* position relative and z-index fix webkit rendering fonts issue */
+  position: relative;
+  z-index: 1; }
+
+.owl-carousel .owl-stage {
+  position: relative;
+  -ms-touch-action: pan-Y; }
+
+.owl-carousel .owl-stage:after {
+  content: ".";
+  display: block;
+  clear: both;
+  visibility: hidden;
+  line-height: 0;
+  height: 0; }
+
+.owl-carousel .owl-stage-outer {
+  position: relative;
+  overflow: hidden;
+  /* fix for flashing background */
+  -webkit-transform: translate3d(0px, 0px, 0px); }
+
+.owl-carousel .owl-controls {
+  margin-top: 0; }
+
+.owl-carousel .owl-controls .owl-nav .owl-prev,
+.owl-carousel .owl-controls .owl-nav .owl-next,
+.owl-carousel .owl-controls .owl-dot {
+  cursor: pointer;
+  cursor: hand;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.owl-carousel.owl-loaded {
+  display: block; }
+
+.owl-carousel.owl-loading {
+  opacity: 0;
+  display: block; }
+
+.owl-carousel.owl-hidden {
+  opacity: 0; }
+
+.owl-carousel .owl-refresh .owl-item {
+  display: none; }
+
+.owl-carousel .owl-item {
+  position: relative;
+  min-height: 1px;
+  float: left;
+  -webkit-backface-visibility: hidden;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.owl-carousel .owl-item img {
+  display: block;
+  width: 100%;
+  -webkit-transform-style: preserve-3d; }
+
+.owl-carousel.owl-text-select-on .owl-item {
+  -webkit-user-select: auto;
+  -moz-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto; }
+
+.owl-carousel .owl-grab {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: -o-grab;
+  cursor: -ms-grab;
+  cursor: grab; }
+
+.owl-carousel.owl-rtl {
+  direction: rtl; }
+
+.owl-carousel.owl-rtl .owl-item {
+  float: right; }
+
+/* No Js */
+.no-js .owl-carousel {
+  display: block; }
+
+/*
+ *  Owl Carousel - Lazy Load Plugin
+ */
+.owl-carousel .owl-item .owl-lazy {
+  opacity: 0;
+  -webkit-transition: opacity 400ms ease;
+  -moz-transition: opacity 400ms ease;
+  -ms-transition: opacity 400ms ease;
+  -o-transition: opacity 400ms ease;
+  transition: opacity 400ms ease; }
+
+.owl-carousel .owl-item img {
+  transform-style: preserve-3d; }
+
+/*
+ *  Owl Carousel - Video Plugin
+ */
+.owl-carousel .owl-video-wrapper {
+  position: relative;
+  height: 100%;
+  background: #000; }
+
+.owl-carousel .owl-video-play-icon {
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  left: 50%;
+  top: 50%;
+  margin-left: -40px;
+  margin-top: -40px;
+  background: url("owl.video.play.png") no-repeat;
+  cursor: pointer;
+  z-index: 1;
+  -webkit-backface-visibility: hidden;
+  -webkit-transition: scale 100ms ease;
+  -moz-transition: scale 100ms ease;
+  -ms-transition: scale 100ms ease;
+  -o-transition: scale 100ms ease;
+  transition: scale 100ms ease; }
+
+.owl-carousel .owl-video-play-icon:hover {
+  -webkit-transition: scale(1.3, 1.3);
+  -moz-transition: scale(1.3, 1.3);
+  -ms-transition: scale(1.3, 1.3);
+  -o-transition: scale(1.3, 1.3);
+  transition: scale(1.3, 1.3); }
+
+.owl-carousel .owl-video-playing .owl-video-tn,
+.owl-carousel .owl-video-playing .owl-video-play-icon {
+  display: none; }
+
+.owl-carousel .owl-video-tn {
+  opacity: 0;
+  height: 100%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  -o-background-size: contain;
+  background-size: contain;
+  -webkit-transition: opacity 400ms ease;
+  -moz-transition: opacity 400ms ease;
+  -ms-transition: opacity 400ms ease;
+  -o-transition: opacity 400ms ease;
+  transition: opacity 400ms ease; }
+
+.owl-carousel .owl-video-frame {
+  position: relative;
+  z-index: 1; }
 
 /*# sourceMappingURL=main.css.map */
