--- a/scss/modules/_events.scss
+++ b/scss/modules/_events.scss
@@ -11,6 +11,14 @@
 			max-height: 200px;
 			overflow: hidden;
 
+			@include breakpoint ($small) {
+				display: none;
+			}
+
+			@include breakpoint ($medium) {
+				display: block;
+			}
+
 			img {
 				width: 300px;
 				height: 200px;
@@ -36,11 +44,18 @@
 		}
 
 		&--border::after {
-			content: '';
-			position: absolute;
-			width: 575px;
-			margin-top: 240px;
-			border-bottom: 2px dotted $light-grey;
+			@include breakpoint ($small) {
+				display: none;
+			}
+
+			@include breakpoint ($xlarge) {
+				display: block;
+				content: '';
+				position: absolute;
+				width: 575px;
+				margin-top: 240px;
+				border-bottom: 2px dotted $light-grey;
+			}	
 		}
 	}
 
