--- a/scss/modules/_faq.scss
+++ b/scss/modules/_faq.scss
@@ -9,7 +9,24 @@
 	p:first-child {
 		font-size: 1.125rem;
 		font-weight: $semibold;
-		margin-top: 0;
+
+		@include breakpoint ($small) {
+    	margin-top: 30px;
+  	}
+  
+		@include breakpoint ($large) {
+			margin-top: 0;
+		}
+	}
+
+	h2 {
+		@include breakpoint ($small) {
+    	margin-bottom: 0;
+  	}
+  
+		@include breakpoint ($large) {
+			margin-bottom: 30px;
+		}
 	}
 
 	.link {
