--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -14,10 +14,18 @@
     color: $dark-grey;
     text-align: center;
     border: none;
-    padding-left: 60px;
-    padding-right: 60px;
     padding-top: $button-padding--tb;
     padding-bottom: $button-padding--tb;
+
+    @include breakpoint ($small) {
+      padding-left: 30px;
+     padding-right: 30px;
+    }
+  
+    @include breakpoint ($medium) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
 
     &--contact {
       font-family: $base-font-family;
@@ -71,7 +79,15 @@
   }
 
   .btn {
-    margin-left: -5px;  
+    @include breakpoint ($small) {
+      margin-top: 15px;
+      margin-left: 0;
+    }
+
+    @include breakpoint ($medium) {
+      margin-top: 0;
+      margin-left: -5px;
+    } 
 
     &--contact {
       @include breakpoint ($small) {
