--- a/scss/modules/_quote.scss
+++ b/scss/modules/_quote.scss
@@ -6,6 +6,14 @@
 	width: 100%;
 	height: 50vh;
 
+	@include breakpoint ($small) {
+    display: none;
+  }
+  
+	@include breakpoint ($medium) {
+		display: block;
+	}
+
 	&__text {
 		text-align: center;
 		margin-top: 175px;
@@ -13,7 +21,14 @@
 
 	&__author {
 		text-align: right;
-		margin-right: 280px;
+
+		@include breakpoint ($medium) {
+   		margin-right: 180px;
+ 		}
+  
+		@include breakpoint ($large) {
+			margin-right: 280px;
+		}
 
 		&::before {
 			content: '-';
